# weniger_krumm_rust

./: .gitignore  Cargo.toml  README.md  flake.nix
Documentation/: main.tex
outputs/txt/: output_"wenigerkrumm1"_847.4342.txt  output_"wenigerkrumm1"_853.2456.txt  output_"wenigerkrumm3"_2297.4482.txt  output_"wenigerkrumm3"_2497.7893.txt  output_"wenigerkrumm3"_3791.4739.txt  output_"wenigerkrumm3"_3937.2065.txt  output_"wenigerkrumm5"_14114.976.txt  output_"wenigerkrumm5"_3775.7832.txt  output_"wenigerkrumm5"_3817.101.txt  output_"wenigerkrumm5"_3844.7886.txt  output_"wenigerkrumm5"_3932.8245.txt  output_"wenigerkrumm5"_4062.2146.txt  output_"wenigerkrumm6"_16736.113.txt  output_"wenigerkrumm7"_5204.271.txt  output_"wenigerkrumm7"_5337.6978.txt
src/: .main.rs.rustfmt  input_output_mod.rs  main.rs  node_mod.rs
src/assets/: line4.txt  parallelogram.txt  pentagon.txt  zigzag.txt  zigzagMixed.txt
